adjusts